ndb - bug#54986 - only set EMPTY_PAGE first time page is accessed in extent (to not reset LSN)